--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,44 +1,50 @@
 .contact__header {
-    margin: var(--margin-24px);
-    text-align: center;
+  margin: var(--margin-24px);
+  text-align: center;
 }
 
 .contact__form {
-    align-items: center;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    width: 50%;
+  align-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  width: 50%;
 }
 
 .message__submit {
-    background: var(--main-background);
-    background: var(--main-gradient);
-    border: none;
-    color: var(--main-color);
-    font-size: var(--font-normal);
-    margin-bottom: var(--margin-24px);
-    padding: 1.5rem;
-    transition: var(--transition);
-    width: 80%;
+  background: var(--main-background);
+  background: var(--main-gradient);
+  border: none;
+  color: var(--main-color);
+  font-size: var(--font-normal);
+  margin-bottom: var(--margin-24px);
+  padding: 1.5rem;
+  transition: var(--transition);
+  width: 80%;
 }
 
 .message__submit:hover {
-    background: rgb(221, 158, 143);
-    background: linear-gradient(117deg, rgba(221, 158, 143, 1) 0%, rgba(208, 162, 118, 1) 57%, rgba(184, 101, 139, 1) 100%);
+  background: rgb(221, 158, 143);
+  background: linear-gradient(
+    117deg,
+    rgba(221, 158, 143, 1) 0%,
+    rgba(208, 162, 118, 1) 57%,
+    rgba(184, 101, 139, 1) 100%
+  );
 }
 .none {
-    display: none;
+  display: none;
 }
 
 .contact__alternatives {
-    font-size: 3rem;
-    text-align: center;
+  font-size: 3rem;
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
-    .contact__form, .message__submit {
-        width: 100%;
-    }
+  .contact__form,
+  .message__submit {
+    width: 100%;
+  }
 }
