--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,70 +1,70 @@
 .about__text,
 .about img {
-  margin: var(--margin-24px);
+    margin: var(--margin-24px);
 }
 
 .about__text {
-  color: var(--section-text-color);
-  margin-bottom: 3.5rem;
-  padding: 0 1rem;
-  width: 60%;
+    color: var(--section-text-color);
+    margin-bottom: 3.5rem;
+    padding: 0 1rem;
+    width: 60%;
 }
 
 .about__text p {
-  margin: 3.5rem 0;
+    margin: 3.5rem 0;
 }
 
 .about__text h3 {
-  display: inline;
-  position: relative;
+    display: inline;
+    position: relative;
 }
 
 .about__text h3::after {
-  background-color: var(--main-background);
-  bottom: 0;
-  content: "";
-  height: 2px;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-  width: 100%;
+    background-color: var(--main-background);
+    bottom: 0;
+    content: '';
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    width: 100%;
 }
 
 .about img {
-  border-radius: 15px;
-  max-height: 640px;
-  width: 40%;
+    border-radius: 15px;
+    max-height: 640px;
+    width: 40%;
 }
 
 @media (max-width: 1024px) {
-  .about {
-    align-items: center;
-    flex-direction: column-reverse;
-  }
+    .about {
+        align-items: center;
+        flex-direction: column-reverse;
+    }
 
-  .about h2,
-  .about h3 {
-    display: block;
-    text-align: center;
-  }
+    .about h2,
+    .about h3 {
+        display: block;
+        text-align: center;
+    }
 
-  .about__text,
-  .about img {
-    padding: 0 2rem;
-    width: 80%;
-  }
+    .about__text,
+    .about img {
+        padding: 0 2rem;
+        width: 80%;
+    }
 
-  .about img {
-    padding: 0;
-  }
+    .about img {
+        padding: 0;
+    }
 }
 
 @media (max-width: 461px) {
-  .about__text {
-    font-size: var(--font-small);
-  }
+    .about__text {
+        font-size: var(--font-small);
+    }
 
-  .about__text p {
-    margin: 2.5rem 0;
-  }
+    .about__text p {
+        margin: 2.5rem 0;
+    }
 }
