--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -48,3 +48,10 @@
         width: 100%;
     }
 }
+
+.abc {
+    background: url('../../assets/layered-waves-haikei-reverse.svg');
+    background-size: cover;
+    margin-bottom: 0;
+    padding-bottom: 8rem;
+}
