--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -35,3 +35,12 @@
     text-decoration: underline;
     text-underline-offset: 5px;
 }
+
+@media (max-width: 468px) {
+    .nav__container {
+        justify-content: center;
+    }
+    .nav__container a {
+        font-size: 2.5rem;
+    }
+}
