--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    padding: 168px 0;
+    padding: 168px 24px;
     text-align: center;
 }
 
