--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -22,11 +22,11 @@
     max-width: 15%;
     text-align: center;
     border-radius: var(--default-radius);
-    transition: all 0.3s ease-in;
+    transition: all 0.3s ease-out;
 }
 .skills__item:hover {
     scale: 1.05;
-    box-shadow: inset 0 0 10px #7d7d7d;
+    box-shadow: 0 1px 6px rgb(32 33 36 / 58%);
 }
 
 .skills__item img {
