--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,30 +1,31 @@
 .header__container {
-    align-items: center;
-    background: url('../../assets/layered-waves-haikei2.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    padding: 168px 24px;
-    text-align: center;
+    align-items: center;
+    position: relative;
 }
 
-.header__container h1,
-.header__container h3,
-.header__container p {
-    color: var(--main-color);
-    padding: 0 168px;
+.header__text {
+    width: 50%;
+    color: #2783ff !important;
 }
-.header__container p {
-    padding-top: 20px;
+.header__text h1 {
+    padding: 0 8rem;
 }
 
-.header__container h3:after {
-    display: none;
+.header__photo {
+    width: 50%;
 }
+.header__photo img {
+    position: relative;
+    z-index: 10;
+    width: 80%;
+    max-width: 500px;
+    margin: 2rem auto;
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+
 
 .header__scroll {
     animation: scrollDown 8s infinite 2s;
@@ -49,15 +50,27 @@
     animation: none;
 }
 
+@media (max-width: 1024px) {
+    .header__container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__text {
+        width: 100%;
+        text-align: center;
+        color: #2783ff !important;
+    }
+    .header__photo {
+        width: 100%;
+    }
+}
+
 @media (max-width: 768px) {
-    .header__container h1,
-    .header__container h3,
-    .header__container p {
-        padding: 0 24px;
+    .header__container h1
+    {
+        padding: 0 10px;
     }
-    .header__container p {
-        padding-top: 16px;
-    }
+    
 }
 
 @keyframes scrollDown {
