--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -1,58 +1,25 @@
 .project__container {
-    padding: 1rem;
-    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
-    width: 80%;
-    margin: 2.4rem auto;
     border-radius: var(--default-radius);
+    box-shadow: var(--box-shadow);
 }
-.project__container h4 {
-    text-align: center;
-    padding: 2rem;
-}
-.project__content {
-    display: grid;
-    grid-template-rows: auto;
-    gap: 10px;
-    justify-items: center;
+.project__container a {
+    padding: 0;
 }
 
-.project__content img {
-    margin: 2.4rem;
-    width: 80%;
-    max-width: 400px;
-}
-.project__content p {
-    padding: 2rem;
-}
-.project__technologies {
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-}
-.project__technologies > * {
-    font-size: 2.3rem;
-}
-.project__links {
-    margin: 5rem 0 0 0;;
-}
-.project__links button {
+.project__container button {
     background-color: #2f80de;
-    color: white;
     border: none;
+    color: var(--background-white);
     margin: 0 15px;
     padding: 0.5rem 1.5rem;
     transition: var(--transition);
 }
 
-.project__links button:hover {
-    scale: 1.1
+.project__container button:hover {
+    scale: 1.1;
 }
 
 @media (min-width: 1024px) {
-    .project__container {
-        width: 60%;
-        padding: 2rem 0;
-    }
     .project__content {
         grid-template-columns: 40% 60%;
         grid-template-areas:
@@ -62,11 +29,7 @@
             'img links';
     }
     .project__content img {
-        grid-area: img;
         align-self: center;
+        grid-area: img;
     }
-    .project__technologies {
-       width: 50%;
-    }
-   
 }
